chore: add user json in response signin
